--- a/WEB/css/css.css
+++ b/WEB/css/css.css
@@ -6,6 +6,11 @@
 body{
     overflow: hidden;
 }
+
+input, textarea {
+        outline: none;
+}
+
 .maindiv{
     border: 4px solid #ac4;
     width: 98%;
@@ -18,7 +23,6 @@ body{
 .left-div {
     position: relative;
     padding: 0 0 0 6px;
-    max-width: 33%;
     width: 33%;
     height: 94%;
     float:left;
@@ -63,4 +67,27 @@ body{
     width: 19%;
     top: 20%;
     height: 80%;
+    background-color: white;
+}
+
+.left-tab {
+    border-left: 1px solid #ac4;
+    border-top: 1px solid #ac4;
+    border-right: 1px solid #ac4;
+    position: relative;
+    width: 19%;
+    top: 20%;
+    height: 80%;
+    background-color: white;
+}
+
+.chosenTab {
+    border-left: 1px solid #ac4;
+    border-right: 1px solid #ac4;
+    border-top: 1px solid #ac4;
+    position: relative;
+    width: 19%;
+    top: 12%;
+    height: 94%;
+    background-color: #fff;
 }
