--- a/WEB/css/css.css
+++ b/WEB/css/css.css
@@ -3,23 +3,26 @@
      -moz-box-sizing: border-box;
           box-sizing: border-box;
 }
+
 body{
     overflow: hidden;
+    padding: 0;
 }
 
-input, textarea {
+input, textarea, button {
         outline: none;
 }
 
 .maindiv{
     border: 4px solid #ac4;
     width: 98%;
-    top: 10%;
+    top: 9%;
     height: 85%;
     left: 1%;
     align-items: center;
     position: absolute;
 }
+
 .left-div {
     position: relative;
     padding: 0 0 0 6px;
@@ -98,4 +101,44 @@ input, textarea {
     height: 100%;
 }
 
+.tab, .left-tab, .sendButton-nonactive {
+    cursor: pointer;
+}
 
+.sendButton-nonactive {
+    position: relative;
+    border: 2px solid #ac4;
+    height: 70%;
+    top: 15%;
+    width: 10%;
+    left: 85%;
+    background-color: #eee;
+}
+
+.sendButton-nonactive:hover {
+    background-color: #fff;
+}
+
+.footerDiv {
+    position: absolute;
+    height: 6%;
+    top: 94%;
+    width: 98%;
+    left: 1%;
+    background-color: #eee;
+}
+
+.sender {
+    font: 12pt/10pt sans-serif;
+    color: #a0c040;
+    vertical-align: middle;
+}
+
+.headerDiv {
+    position: absolute;
+    height: 9%;
+    top: 0;
+    left: 1%;
+    width: 98%;
+    background-color: #eee;
+}
