--- a/css/css.css
+++ b/css/css.css
@@ -23,14 +23,7 @@ input, textarea, button {
     position: absolute;
 }
 
-.left-div {
-    position: relative;
-    padding: 0 0 0 6px;
-    width: 33%;
-    height: 94%;
-    float:left;
-    border-right: 2px solid #ac4;
-}
+
 
 .right-div {
     position: relative;
@@ -73,16 +66,6 @@ input, textarea, button {
     background-color: #eee;
 }
 
-.left-tab {
-    border-left: 1px solid #ac4;
-    border-top: 1px solid #ac4;
-    border-right: 1px solid #ac4;
-    position: relative;
-    width: 19%;
-    top: 20%;
-    height: 80%;
-    background-color: #eee;
-}
 
 .chosenTab {
     border-left: 1px solid #ac4;
@@ -101,7 +84,7 @@ input, textarea, button {
     height: 100%;
 }
 
-.tab, .left-tab, .sendButton-nonactive {
+.tab, .left-tab, .sendButton-nonactive, .openbutton {
     cursor: pointer;
 }
 
@@ -151,4 +134,66 @@ input, textarea, button {
     background-color: #fff;
     top: 100%;
     width: 100%;
+}
+
+.openbutton {
+    position: relative;
+    border: 2px solid #ac4;
+    height: 100%;
+    width: 100%;
+    float: right;
+    background-color: #eee;
+}
+.openbutton:hover {
+    background-color: #fff;
+}
+.file_upload{
+    display: block;
+    position: relative;
+    overflow: hidden;
+    font-size: 1em;
+    height: 70%;
+    top: 15%;
+    min-width: 120px;
+    width: 10%;
+    left: 5%;
+    float: left;
+    background-color: #eee;
+}
+
+.file_upload input{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    transform: scale(20);
+    opacity: 0;
+}
+
+.pages-container>div{
+        background-color: #fff;
+        margin: 0;
+}
+
+.left-tab {
+    border-left: 1px solid #ac4;
+    border-top: 1px solid #ac4;
+    border-right: 1px solid #ac4;
+    position: relative;
+    width: 19%;
+    top: 20%;
+    height: 80%;
+    background-color: #eee;
+}
+
+.pages-container {
+    position: relative;
+    padding: 0 0 0 6px;
+    width: 33%;
+    height: 94%;
+    float:left;
+    overflow: auto;
+    border-right: 2px solid #ac4;
+    background-color: grey;
 }
