--- a/css/css.css
+++ b/css/css.css
@@ -205,7 +205,7 @@ input, textarea, button {
     border: solid 1px black;
     left: 55%;
     top: 25%;
-
+	overflow-y:scroll;
 
 }
 .objectBox{
@@ -216,6 +216,7 @@ input, textarea, button {
     border: solid 1px black;
     left: 7%;
     top: 25%;
+	overflow-y:scroll;
 }
 .attributesText
 {
