--- a/draw/styles.css
+++ b/draw/styles.css
@@ -28,6 +28,10 @@ body{
     height: 100%;
     flex-grow: 2;
 }
+.canvas svg{
+    height: 100%;
+    width: 100%; 
+}
 .figure{
     width:100px;
     height:70px;
