--- a/draw/styles.css
+++ b/draw/styles.css
@@ -1,16 +1,18 @@
 body {
     margin: 0px;
 }
-
+/*
 .border {
     border-style: solid;
     border-color: grey;
     border-width: 1px
 }
+*/
 
 .container {
     height: 500px;
     display: flex;
+    background-color: rgba(128, 128, 128, 0.04);
 }
 
 .tools {
@@ -20,9 +22,10 @@ body {
 }
 
 .figures {
-    background-color: #dee0e2;
+    background-color: rgba(128, 128, 128, 0.12);
     display: flex;
     flex-direction: column;
+    box-shadow: 0px 0px 10px 0px grey;
 }
 
 .list {
@@ -30,13 +33,16 @@ body {
 }
 
 .canvas {
-    height: 100%;
+    height: 90%;
     flex-grow: 2;
+    background-color: white;
+    margin: 20px;
 }
 
 .canvas svg {
     height: 100%;
     width: 100%;
+    box-shadow: 0px 0px 10px 0px grey;
 }
 
 .figure {
