--- a/css/draw.css
+++ b/css/draw.css
@@ -58,6 +58,7 @@ body {
     position: relative;
     margin: auto;
     margin-top: -400;
+    top: -300px;
     z-index: 1000;
     height: 150px;
     width: 300px;
