--- a/draw/styles.css
+++ b/draw/styles.css
@@ -12,7 +12,6 @@ body {
 .container {
     height: 500px;
     display: flex;
-    background-color: rgba(128, 128, 128, 0.04);
 }
 
 .tools {
@@ -20,13 +19,14 @@ body {
     display: flex;
     flex-direction: column;
 }
-
+/*
 .figures {
     background-color: rgba(128, 128, 128, 0.12);
     display: flex;
     flex-direction: column;
     box-shadow: 0px 0px 10px 0px grey;
 }
+*/
 
 .list {
     flex-grow: 2;
@@ -37,12 +37,13 @@ body {
     flex-grow: 2;
     background-color: white;
     margin: 20px;
+    margin-left: 0px;
 }
 
 .canvas svg {
     height: 100%;
     width: 100%;
-    box-shadow: 0px 0px 10px 0px grey;
+    /*    box-shadow: 0px 0px 10px 0px grey;*/
 }
 
 .figure {
@@ -57,14 +58,22 @@ body {
     overflow: visible;
     position: relative;
     margin: auto;
+    width: 300px;
     margin-top: -400;
     z-index: 1000;
-    height: 150px;
-    width: 300px;
     background-color: rgba(128, 128, 128, 0.05);
-    box-shadow: 0px 0px 10px 0px grey;
+    box-shadow: 0px 0px 10px 0px black !important;
     display: flex;
     flex-direction: column;
+}
+
+.dialog .panel-footer {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.dialog .panel-footer input {
+    margin-left: 10px;
 }
 
 .entityName {
