--- a/css/draw.css
+++ b/css/draw.css
@@ -91,7 +91,7 @@ body {
 .entityNameDeleteButton {
     height: 30px;
     width: 100px;
-    background-color: skyblue;
+    background-color: indianred;
     margin: auto;
     margin-top: 0px
 }
