--- a/css/draw.css
+++ b/css/draw.css
@@ -9,7 +9,7 @@ body {
 }
 */
 
-.container {
+.drawer {
     height: 500px;
     display: flex;
 }
@@ -19,17 +19,15 @@ body {
     display: flex;
     flex-direction: column;
 }
-/*
+
 .figures {
-    background-color: rgba(128, 128, 128, 0.12);
     display: flex;
     flex-direction: column;
-    box-shadow: 0px 0px 10px 0px grey;
+    width: auto;
 }
-*/
 
 .list {
-    flex-grow: 2;
+    flex-grow: 1;
 }
 
 .canvas {
@@ -52,7 +50,9 @@ body {
     margin: 10px;
 }
 
-.column {}
+.column {
+    margin-bottom: 5px;
+}
 
 .dialog {
     overflow: visible;
