--- a/css/workenv.css
+++ b/css/workenv.css
@@ -55,20 +55,57 @@
 #cont {
 	width: 40%;
     height: 50%;
-	margin-left: 60%;
-	margin-right: 0%;
+	margin-left: 0%;
+	margin-right: auto;
 }
 
-#userName {
-  font-weight: bold;
-    width: 30%;
-}
+
 
 #icon {
     background-image: url('icon/no_avatar.gif');
     background-size:cover;
-    width: 10%;
-    height: 170%;
-  margin-top: 1%;
+    margin: auto;
+    top:5px;
+    width: 50px;
+    height: 50px;
+}
 
+.logout {
+    display: block;
+    position: relative;
+    overflow: hidden;
+    height: 70%;
+    top: 15%;
+    min-width: 120px;
+    width: 10%;
+    left: 5%;
+    float: left;
+    background-color: #eee;
+}
+
+.icondiv {
+    margin-left: 50px;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+}
+
+.logoutButton {
+    position: relative;
+    border: 2px solid #ac4;
+    height: 50%;
+    top: 35%;
+    min-width: 120px;
+    width: 10%;
+    right: 5%;
+    float: right;
+    background-color: #fee;
+}
+
+.logoutButton:hover {
+    background-color: #fff;
+}
+
+.userTextDiv {
+    margin-left: 10px;
 }
