--- a/css/object_models.css
+++ b/css/object_models.css
@@ -15,24 +15,20 @@
 }
 
 .model .panel-body {
-    height: 400px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    padding: 15px;
+    height: 300px;
+    padding: 0px;
 }
 
 .model .figures {
+    display: inline-flex;
     position: relative;
     justify-content: space-between;
-    left: -15px;
-    bottom: -35px;
-    width: 135px;
-    padding: 0px 15px 15px 15px;
+    left: -1px;
+    bottom: -21px;
+    padding: 15px 0px 15px 15px;
 }
-
 .figures input {
-    margin-top: 15px;
     height: 70px;
-    width: 100px
+    width: 100px;
+    margin-right:15px;
 }
