--- a/css/object_models.css
+++ b/css/object_models.css
@@ -3,7 +3,7 @@
 }
 
 .model {
-    margin: 10px;
+    margin: 20px;
 }
 
 .functional-model {
@@ -19,7 +19,7 @@
     padding: 0px;
 }
 
-.model .figures {
+.model .figuresBar {
     display: inline-flex;
     position: relative;
     justify-content: space-between;
@@ -27,7 +27,7 @@
     bottom: -21px;
     padding: 15px 0px 15px 15px;
 }
-.figures input {
+.figuresBar input {
     height: 70px;
     width: 100px;
     margin-right:15px;
