--- a/css/project.css
+++ b/css/project.css
@@ -1,26 +1,3 @@
-.photo
-{
-    height: 43%;
-    width: 18%;
-    position: absolute;
-    top : 20%;
-    left: 4%;
-    border: 2px solid #B5B5B5;
-}
-.nameText
-{
-    text-align: center;
-}
-.buttons
-{
-    position: absolute;
-    border: 2px solid #B5B5B5;
-    height: 40px;
-    width: 40%;
-    background-color: white;
-
-    left: 35%;
-}
 .continueButton
 {
     top:35%;
@@ -33,6 +10,23 @@
 .downloadButton
 {
     top: 55%;
+}
+.leftDivBut
+{
+    position: absolute;
+    padding:0px;
+    width: 27%;
+    height: 100%;
+    float:left;
+    overflow: auto;
+    border-right: 2px solid #ac4;
+}
+.rightDiv {
+    position: relative;
+    float: right;
+    width: 73%;
+    height: 100%;
+
 }
 
 
