--- a/css/dialog.css
+++ b/css/dialog.css
@@ -2,12 +2,11 @@
     overflow: visible;
     position: relative;
     margin: auto;
-    margin-top: -400;
-    top: -300px;
+    top:-400px;
     z-index: 1000;
     background-color: rgba(128, 128, 128, 0.05);
     box-shadow: 0px 0px 10px 0px grey !important;
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
 }
 
