--- a/css/object_models.css
+++ b/css/object_models.css
@@ -6,7 +6,7 @@
 }
 
 .object-relation-model {
-height: 300px;
+	height: 300px;
 }
 
 .model .panel-body {
@@ -20,6 +20,7 @@ height: 300px;
     justify-content: space-between;
     left: -1px;
     padding: 15px 0px 15px 15px;
+    margin:0px;
 }
 .figuresBar input {
     height: 70px;
