--- a/css/diagram.css
+++ b/css/diagram.css
@@ -1,3 +1,35 @@
+
+.model {
+    margin: 20px;
+}
+
+.functional-model {
+}
+
+.object-relation-model {
+}
+
+.model .panel-body {
+    height: 300px;
+    padding: 0px;
+}
+
+.model .figuresBar {
+    display: inline-flex;
+    position: relative;
+    justify-content: space-between;
+    left: -1px;
+    padding: 15px 0px 15px 15px;
+    margin:0px;
+}
+.figuresBar input {
+    height: 70px;
+    width: 100px;
+    margin-right:15px;
+}
+
+/* Dialogs */
+
 .dialog {
     overflow: visible;
     position: relative;
