--- a/css/diagram.css
+++ b/css/diagram.css
@@ -1,6 +1,6 @@
-
 .model {
     margin: 20px;
+	height: 500px;
 }
 
 .functional-model {
@@ -15,15 +15,15 @@
 }
 
 .model .figuresBar {
-    display: inline-flex;
-    position: relative;
-    justify-content: space-between;
+	position: relative;
     left: -1px;
+	top: -1px;
     padding: 15px 0px 15px 15px;
     margin:0px;
+	width: 100.2%;
 }
 .figuresBar input {
-    height: 70px;
+    height: 50px;
     width: 100px;
     margin-right:15px;
 }
@@ -31,15 +31,18 @@
 /* Dialogs */
 
 .dialog {
-    overflow: visible;
-    position: relative;
     margin: auto;
-    top:-400px;
-    z-index: 1000;
-    background-color: rgba(128, 128, 128, 0.05);
+	margin-top: -300px;
     box-shadow: 0px 0px 10px 0px grey !important;
-    display: inline-flex;
-    flex-direction: column;
+}
+
+.dialog .panel-body{
+	height:auto;
+	padding: 15px;
+}
+
+.dialog .list-group{
+	width: 100%;
 }
 
 .change-name {
