--- a/css/registration.css
+++ b/css/registration.css
@@ -1,144 +1,180 @@
-* {
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+*, *:before, *:after {
+  box-sizing: border-box;
 }
 
-.mainBlock {
-    border: #ac4 solid 2px;
-    background-color: #e0f79c;
-    width: 98%;
-    top: 7%;
-    height: 86%;
-    left: 1%;
-    align-items: center;
-    position: absolute;
+html {
+  overflow-y: scroll;
 }
 
-.mainBlockTeacher {
-    border: #D04A5F solid 2px;
-    background-color: #Faa0Ae;
-    width: 98%;
-    top: 7%;
-    height: 86%;
-    left: 1%;
-    align-items: center;
-    position: absolute;
-}
-.footerBlock {
-    position: absolute;
-    height: 7%;
-    top: 93%;
-    width: 98%;
-    left: 1%;
-    background-color: #eee;
+body {
+  background: #c1bdba;
+  font-family: 'Titillium Web', sans-serif;
 }
 
-.headerBlock {
-    position: absolute;
-    height: 7%;
-    top: 0;
-    left: 1%;
-    width: 98%;
-    background-color: #eee;
+a {
+  text-decoration: none;
+  color: #1ab188;
+  -webkit-transition: .5s ease;
+          transition: .5s ease;
+}
+a:hover {
+  color: #179b77;
 }
 
-.typeOf {
-    position: relative;
-    width: 40%;
-    height: 225px;
-    left: 30%;
-    top: 30px;
+.form {
+  background: rgba(19, 35, 47, 0.9);
+  padding: 40px;
+  max-width: 600px;
+  margin: 40px auto;
+  border-radius: 4px;
+  box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
 }
 
-.student {
-    position: absolute;
-    width: 45%;
-    height: 15%;
-    left: 0;
-    top: 0;
-    background-color: #AED14A;
+.tab-group {
+  list-style: none;
+  padding: 0;
+  margin: 0 0 40px 0;
+}
+.tab-group:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.tab-group li a {
+  display: block;
+  text-decoration: none;
+  padding: 15px;
+  background: rgba(160, 179, 176, 0.25);
+  color: #a0b3b0;
+  font-size: 20px;
+  float: left;
+  width: 50%;
+  text-align: center;
+  cursor: pointer;
+  -webkit-transition: .5s ease;
+          transition: .5s ease;
+}
+.tab-group li a:hover {
+  background: #179b77;
+  color: #ffffff;
+}
+.tab-group .active a {
+  background: #1ab188;
+  color: #ffffff;
 }
 
-.teacher {
-    position: absolute;
-    width: 45%;
-    height: 15%;
-    left: 55%;
-    top: 0;
-    background-color: #D04A5F;
+.tab-content > div:last-child {
+  display: none;
 }
 
-.container_form {
-    position: absolute;
-    height: 450px;
-    width: 40%;
-    top: 100px;
-    background-color: grey;
-    left: 30%;
+h1 {
+  text-align: center;
+  color: #ffffff;
+  font-weight: 300;
+  margin: 0 0 40px;
 }
 
-#registration_form {
-	margin:10px;
-}
-#registration_box {
-	position:absolute;
-	height: 100%;
-	width: 100%;
-	margin: 0;
-	top: 0;
-	left: 0;
-	text-align: center;
-	padding: 0px;
-	background-color: #f5f5f5;
-	border: 1px dotted #000000;
-	overflow: auto;
-    display: block;
-}
 label {
-	display:block;
-	width:200px;
-	padding:0 6px;
-	float:left;
-	text-align:right;
+  position: absolute;
+  -webkit-transform: translateY(6px);
+      -ms-transform: translateY(6px);
+          transform: translateY(6px);
+  left: 13px;
+  color: rgba(255, 255, 255, 0.5);
+  -webkit-transition: all 0.25s ease;
+          transition: all 0.25s ease;
+  -webkit-backface-visibility: hidden;
+  pointer-events: none;
+  font-size: 22px;
 }
-input {
-	float:left;
+label .req {
+  margin: 2px;
+  color: #1ab188;
 }
 
-form br {
-	clear:both;
+label.active {
+  -webkit-transform: translateY(50px);
+      -ms-transform: translateY(50px);
+          transform: translateY(50px);
+  left: 2px;
+  font-size: 14px;
+}
+label.active .req {
+  opacity: 0;
 }
 
-#student_field {
-    display: none;
+label.highlight {
+  color: #ffffff;
 }
 
-#teacher_field {
-    display: none;
+input, textarea {
+  font-size: 22px;
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 5px 10px;
+  background: none;
+  background-image: none;
+  border: 1px solid #a0b3b0;
+  color: #ffffff;
+  border-radius: 0;
+  -webkit-transition: border-color .25s ease, box-shadow .25s ease;
+          transition: border-color .25s ease, box-shadow .25s ease;
 }
-#submit {margin-left: 150px;}
+input:focus, textarea:focus {
+  outline: 0;
+  border-color: #1ab188;
+}
 
-#registration_result {
-	display:block;
-	margin:10px;
-	text-align: left;
-	text-indent: 5px;
-	height:22px;
-	line-height:22px;
+textarea {
+  border: 2px solid #a0b3b0;
+  resize: vertical;
 }
-.error {
-	background:#f9caca;
-	border: 1px solid #f00;
+
+.field-wrap {
+  position: relative;
+  margin-bottom: 40px;
 }
-.success {
-	background:#caf9ca;
-	border: 1px solid #0f0;
+
+.top-row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
-.process {
-	background:#cacaf9;
-	border: 1px solid #00f;
+.top-row > div {
+  float: left;
+  width: 48%;
+  margin-right: 4%;
 }
-.hidden {
-    display: none;
+.top-row > div:last-child {
+  margin: 0;
+}
+
+.button {
+  border: 0;
+  outline: none;
+  border-radius: 0;
+  padding: 15px 0;
+  font-size: 2rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  background: #1ab188;
+  color: #ffffff;
+  -webkit-transition: all 0.5s ease;
+          transition: all 0.5s ease;
+  -webkit-appearance: none;
+}
+.button:hover, .button:focus {
+  background: #179b77;
+}
+
+.button-block {
+  display: block;
+  width: 100%;
+}
+
+.forgot {
+  margin-top: -20px;
+  text-align: right;
 }
