--- a/css/css.css
+++ b/css/css.css
@@ -289,3 +289,29 @@ input, textarea, button {
     left: 4%;
     border: 2px solid #ac4;
 }
+
+
+
+.constrText {
+    display: flex;
+    flex-direction: row;
+    margin-left: 5%;
+}
+
+.constrHead {
+    display: flex;
+    flex-direction: row;
+}
+
+.constraintPanel {
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 2%;
+    margin-bottom: %;
+}
+
+/*#constrBox {
+    border-color: #c0c0c0;
+}*/
+
+
