--- a/css/css.css
+++ b/css/css.css
@@ -206,7 +206,8 @@ input, textarea, button {
     border-right: 2px solid #ac4;
     background-color: grey;
 }
-.objects-container {
+
+.objects-attr-container {
     position: absolute;
     padding:0px;
     margin-top: 27%;
@@ -217,6 +218,7 @@ input, textarea, button {
     border-right: 2px solid #ac4;
     /*background-color: grey;*/
 }
+
 .attributesBox{
     position: absolute;
     width: 35%;
