--- a/css/diagram.css
+++ b/css/diagram.css
@@ -11,7 +11,7 @@
 }
 
 .model .panel-body {
-	overflow: scroll;
+	overflow: auto;
     padding: 0px;
 	height: 100px;
 	flex-grow: 1;
@@ -34,9 +34,10 @@
 /* Dialogs */
 
 .dialog {
-    position: relative;
+    position: absolute;
+    left: 30%;
     margin: auto;
-    margin-top: -200px;
+    margin-top: -250px;
     box-shadow: 0px 0px 10px 0px grey !important;
 }
 
@@ -54,7 +55,7 @@
 }
 
 .options {
-    width: 200px;
+    width: 40%;
     display: flex;
 }
 
@@ -117,5 +118,7 @@
 	height:50px;
 	width: 100px;
 	border: 1px solid grey;
-	background-color: green;
+	background-color: white;
+    border: 0;
+    box-shadow: 0.5px 0.5px 5px rgba(0,0,0,0.5);
 }
