Перевод в латинницу и наоборот

--- a/css/project.css
+++ b/css/project.css
@@ -40,5 +40,6 @@
     flex-direction: column;
     margin:auto;
 }
-
-
+body > div.maindiv > div.leftDivBut > div > div.gorizont > div > div {
+width: 100%;
+}
