--- a/css/workenv.css
+++ b/css/workenv.css
@@ -32,7 +32,7 @@
 .inputs {
     display: flex;
     flex-direction: row;
-    width: 49%;
+    width: 100%;
     margin: auto;
 }
 
@@ -51,6 +51,11 @@
     border-top: none;
     border-right: none;
     box-sizing: border-box;
+	  border: none;
+  width: 100%;
+  height: 20%;
+  margin: 0;
+}
 }
 
 .inputs .full input {
