--- a/css/css.css
+++ b/css/css.css
@@ -28,8 +28,6 @@ input, textarea, button {
     position: absolute;
 }
 
-
-
 .right-div {
     position: relative;
     width: 60%;
@@ -196,29 +194,29 @@ input, textarea, button {
     background-color: #eee;
 }
 
+.left-panel {
+	display: table;
+	width: 40%;
+	float: left;
+	height: 94%;
+}
+
+.objects-attr-container {
+	display: table-row;
+	height: 0;
+}
+
 .pages-container {
-    position: absolute;
+	width: 100%;
+	height: 100%;
+	display: table-row; 
     padding:0px;
-    width: 40%;
-    height: 64%;
     float:left;
     overflow: auto;
     border-right: 2px solid #ac4;
     background-color: grey;
 }
 
-.objects-attr-container {
-    position: absolute;
-    display: inline-block;
-    bottom: 0;
-    padding:0px;
-    margin-top: 27%;
-    width: 40%;
-    float:left;
-    overflow: auto;
-    border-right: 2px solid #ac4;
-    /*background-color: grey;*/
-}
 
 .attributesBox{
     position: absolute;
@@ -293,8 +291,6 @@ input, textarea, button {
     left: 4%;
     border: 2px solid #ac4;
 }
-
-
 
 .constrText {
     display: flex;
