adding relation object from list + actor fixed + styles fixed

--- a/css/css.css
+++ b/css/css.css
@@ -201,7 +201,7 @@ input, textarea, button {
 	height: 94%;
 }
 
-.objects-attr-container {
+.attr-objects-container {
 	display: table-row;
 	height: 0;
 }
