--- a/css/workenv.css
+++ b/css/workenv.css
@@ -176,7 +176,7 @@
 }
 
 .box {
-	display: inline-block;
+	display: flex;
 	padding-top: 50px;
 	height: 100%;
 	width: 100%;
@@ -184,25 +184,38 @@
 }
 
 .namePanel{
+    border-top-right-radius: 0px !important;
+    border-bottom-right-radius: 0px !important;
+    padding:0px !important;
+    display: flex;
+    flex-direction: column;
     float: left;
     position: relative;
-    width: 25%;
+    min-width: 200px;
     height: 100%;;
 }
 
+.namePanel .panel-body {
+  flex-grow: 1;
+  padding: 0px;
+}
 .objects-select{
+    flex-grow: 1;
+    padding: 0px !important;
 	border-top: 0 !important;
 	border-left: 0 !important;
 	border-right: 0 !important;
-	border-bottom-radius: 0px !important;
+	border-radius: 0px !important;
+}
+
+.objects-select a {
+    border-radius: 0px !important;
+    border-left: 0;
+    border-right: 0;
 }
 
 .new-object {
 	display: flex;
-	height: 50px;
-	width: 100%;
-	position: absolute;
-	bottom: 0px;
 }
 
 .new-object button {
@@ -210,11 +223,13 @@
 }
 
 .detailsPanel{
+    border-top-left-radius: 0px !important;
+    border-bottom-left-radius: 0px !important;
 	height: 100%;
     float: left;
     position: relative;
-    width: 67%;
-    margin-left: 10px;
+    flex-grow: 1;
+    border-left: 0 !important;
 }
 .deleteButton
 {
