--- a/css/lib/pure-release-0.6.0/pure-nr.css
+++ b/css/lib/pure-release-0.6.0/pure-nr.css
@@ -1184,7 +1184,7 @@ since IE8 won't execute CSS that contains a CSS3 selector.
 .pure-menu-item {
     padding: 0;
     margin: 0;
-    height: 100%;
+    //height: 100%;
 }
 
 .pure-menu-link,
