--- a/css/workenv.css
+++ b/css/workenv.css
@@ -143,6 +143,16 @@
 }
 /* -------------------- */
 
+.tile-container {
+    height: 100%;
+}
+
+.tile {
+    height: 100%;
+}
+
+/* -------------------- */
+
 .content-box {
     height: 100%;
     width: 100%;
