--- a/css/styles.css
+++ b/css/styles.css
@@ -117,14 +117,23 @@ body {
 
 .project-menu {
     background-color: aqua;
-    width: 200px;
     margin: 3 auto 3 10;
 }
 
 .user-block {
-    background-color: aqua;
-    width: 200px;
+    color: aliceblue;
+    font-size: 25px;
+    font-weight: 700;
+    font: font-family: 'Open Sans', Helvetica, sans-serif;
     margin: 3 10 3 auto;
+    background: #39b1cc;
+  background: -moz-linear-gradient(top, #51bbd2 0%, #2d97af 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #51bbd2), color-stop(100%, #2d97af));
+  background: -webkit-linear-gradient(top, #51bbd2 0%, #2d97af 100%);
+  background: -o-linear-gradient(top, #51bbd2 0%, #2d97af 100%);
+  background: -ms-linear-gradient(top, #51bbd2 0%, #2d97af 100%);
+  background: linear-gradient(to bottom, #51bbd2 0%, #2d97af 100%);
+    padding: 0.26em;
 }
 
 .add-form {
@@ -171,12 +180,14 @@ body {
 }
 
 .table-header {
+    border-radius: 3px;
     background-color: cadetblue;
     padding: 0.4em;
+    color: aliceblue;
 }
 .tbody-div {
-    height: 100;
     position: relative;
+    height: 200px;
     overflow-y: auto;
     overflow-x: hidden;
 }
