--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,8 @@ body {
 
 .custom-restricted-width {
     display: inline-block;
+    position: relative;
+    height: 48%;
 }
 
 .editTextTabButton {
@@ -102,9 +104,10 @@ body {
     background-color: white;
     display: flex;
     flex-direction: column;
-    align-content: stretch;
+    align-content: flex-start;
     padding: 0;
     box-shadow: 0px 0px 5px black;
+    width: 20em;
 }
 
 .add-obj-input {
@@ -116,7 +119,6 @@ body {
 }
 
 .project-menu {
-    background-color: aqua;
     margin: 3 auto 3 10;
 }
 
@@ -126,13 +128,8 @@ body {
     font-weight: 700;
     font: font-family: 'Open Sans', Helvetica, sans-serif;
     margin: 3 10 3 auto;
-    background: #39b1cc;
-  background: -moz-linear-gradient(top, #51bbd2 0%, #2d97af 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #51bbd2), color-stop(100%, #2d97af));
-  background: -webkit-linear-gradient(top, #51bbd2 0%, #2d97af 100%);
-  background: -o-linear-gradient(top, #51bbd2 0%, #2d97af 100%);
-  background: -ms-linear-gradient(top, #51bbd2 0%, #2d97af 100%);
-  background: linear-gradient(to bottom, #51bbd2 0%, #2d97af 100%);
+    background: cadetblue;
+    border-radius: 3px;
     padding: 0.26em;
 }
 
@@ -161,6 +158,7 @@ body {
     flex: auto;
     position: relative;
     width: 100%;
+    padding-bottom: 10px;
 }
 
 .table-oa tr {
@@ -186,8 +184,23 @@ body {
     color: aliceblue;
 }
 .tbody-div {
-    position: relative;
-    height: 200px;
-    overflow-y: auto;
+    height: 20%;
+    overflow-y: scroll;
     overflow-x: hidden;
+}
+
+.attr-box {
+    position: relative;
+    width: 20em;
+    height: 18em;
+    left: 20em;
+    top: -20em;
+    display: block;
+}
+
+.elem-name-td {
+
+    display: inline-block;
+    position: relative;
+    width: 100%;
 }
