--- a/DreamTeamProj/WebContent/css/lib/pure-release-0.6.0/pure-nr.css
+++ b/DreamTeamProj/WebContent/css/lib/pure-release-0.6.0/pure-nr.css
@@ -1311,7 +1311,7 @@ since IE8 won't execute CSS that contains a CSS3 selector.
 .pure-menu-link,
 .pure-menu-disabled,
 .pure-menu-heading {
-    padding: 0.3em 1em;
+    padding: .5em 1em;
 }
 
 .pure-menu-disabled {
