--- a/css/upside-menu.css
+++ b/css/upside-menu.css
@@ -5,7 +5,6 @@
 #cssmenu ul li a {
     margin: 0;
     padding: 0;
-    border-radius: 3px;
     list-style: none;
     line-height: 1;
     display: block;
@@ -26,16 +25,14 @@
 }
 
 #cssmenu {
-    width: auto;
     font-family: 'Open Sans', Helvetica, sans-serif;
     background: cadetblue;
-    border-radius: 3px;
 }
 
 
 #cssmenu > ul > li > a {
-    padding: 1.1em 0.5em 0 0.9em;
-    height: 3.2em;
+    padding: 1.4em 0.5em 0 0.9em;
+    height: 100%;
     border-right: 1px solid rgba(80, 80, 80, 0.12);
     text-decoration: none;
     font-size: 13px;
@@ -50,7 +47,6 @@
 #cssmenu > ul > li.active > a {
     color: #ffffff;
     background: cadetblue;
-    background: rgba(0, 0, 0, 0);
 }
 
 #cssmenu > ul > li.has-sub > a {
@@ -65,7 +61,7 @@
     border: 6px solid transparent;
     border-top-color: #d3eced;
     right: 1em;
-    top: 1.4em;
+    top: 1.6em;
 }
 
 #cssmenu > ul > li.has-sub.active > a::after,
@@ -86,11 +82,10 @@
     -o-transition: top 0.2s ease, opacity 0.2s ease-in;
     transition: top 0.2s ease, opacity 0.2s ease-in;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1), 1px 1px 1px rgba(0, 0, 0, 0.1), -1px 1px 1px rgba(0, 0, 0, 0.1);
-    z-index: 1;
 }
 
 #cssmenu > ul > li:hover > ul {
-    top: 43px;
+    top: 47px;
     left: 0;
     opacity: 1;
 }
@@ -105,6 +100,7 @@
     background: #ffffff;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1), 1px 1px 1px rgba(0, 0, 0, 0.1), -1px 1px 1px rgba(0, 0, 0, 0.1);
 }
+
 #cssmenu ul ul li .second{
     text-decoration: none;
     font-weight: 400;
