--- a/DreamTeamProj/WebContent/css/styles.css
+++ b/DreamTeamProj/WebContent/css/styles.css
@@ -19,6 +19,7 @@ body {
 
 .header,
 .footer {
+    position: absolute;
     background-color: darkgrey;
     width: 100%;
     z-index: 5;
@@ -34,6 +35,7 @@ body {
 }
 
 .header {
+    top: 0px;
     height: 3em;
     order: 1;
     display: flex;
@@ -42,6 +44,7 @@ body {
 }
 
 .footer {
+    bottom: 0px;
     order: 3;
     height: 1.3em;
     padding-bottom: 3;
@@ -50,6 +53,8 @@ body {
 }
 
 .main {
+    padding-top: 3em;
+    padding-bottom: 1.3em;
     order: 2;
     background-color: whitesmoke;
     width: 100%;
@@ -110,6 +115,7 @@ body {
     padding: 0;
     box-shadow: 0px 0px 5px black;
     width: 20em;
+    z-index: 1;
 }
 
 .add-obj-input {
@@ -117,7 +123,9 @@ body {
 }
 
 .extend-box {
+    position: relative;
     flex-grow: 5;
+    z-index: 0;
 }
 
 .project-menu {
@@ -126,9 +134,6 @@ body {
 
 .user-block {
     color: #fff;
-    font-size: 25px;
-    font-weight: 700;
-    font: font-family: 'Open Sans', Helvetica, sans-serif;
     background: cadetblue;
     font-family: 'Open Sans', Helvetica, sans-serif;
     font-size: 19px;
@@ -209,4 +214,37 @@ body {
     display: inline-block;
     position: relative;
     width: 100%;
+}
+
+.user-name-block {
+    padding: 0.7em;
+    color: #fff;
+    background: cadetblue;
+    font-family: 'Open Sans', Helvetica, sans-serif;
+    font-size: 17px;
+    font-weight: 700;
+}
+
+.left-dash-side {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    padding: 0;
+    box-shadow: 0px 0px 5px black;
+    width: 13em;
+    z-index: 2;
+}
+
+.user-logout-block {
+    padding: 0.7em;
+    color: #fff;
+    background: cadetblue;
+    font-family: 'Open Sans', Helvetica, sans-serif;
+    font-size: 17px;
+    font-weight: 700;
+}
+
+.pointer {
+    cursor: pointer;
 }
