--- a/css/styles.css
+++ b/css/styles.css
@@ -242,3 +242,48 @@ body {
 .pointer {
     cursor: pointer;
 }
+
+.projects-container {
+    width: 100%;
+    max-height: 80%;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.projects-header {
+    width: 100%;
+    height: 5%;
+}
+
+.projects-tr {
+    width: 100%;
+    height: 2em;
+}
+
+.projects-title {
+    height: 100%;
+    display: inline-block;
+    width: 50%;
+}
+
+.projects-date {
+    height: 100%;
+    display: inline-block;
+    width: 30%;
+}
+
+.projects-status {
+    height: 100%;
+    display: inline-block;
+    width: 10%;
+}
+
+.projects-send {
+    height: 100%;
+    display: inline-block;
+    width: 9%;
+}
+
+.projects-toolbar {
+    height: 10%;
+}
